--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
       <h1>C Programming Slides</h1>
       <div class="author">Created by Prof. Jyotiprakash Mishra</div>
       <div class="blog-link">
-        <a href="https://blog.jyotiprakash.org" target="_blank">Visit My Blog →</a>
+        <a href="https://blog.jyotiprakash.org" target="_blank">Visit My Blog</a> |
+        <a href="https://blog.jyotiprakash.org/page/resume" target="_blank">About Me</a>
       </div>
     </header>
 
