Add deck 25: Static and Global Variables
Covers storage classes, static and global variables, extern keyword,
internal and external linkage. Updates README and index for 25 decks.

--- a/index.html
+++ b/index.html
@@ -350,6 +350,15 @@
           <a href="deck24_file_io.pdf" download>Download</a>
         </div>
       </li>
+
+      <li class="slide-item">
+        <div class="slide-title"><span class="slide-number">25</span>Static and Global Variables</div>
+        <div class="slide-description">Storage classes (auto, static, extern, register), global and local scope, static variables, extern keyword, internal and external linkage.</div>
+        <div class="slide-links">
+          <a href="deck25_static_global.pdf" target="_blank">View PDF</a>
+          <a href="deck25_static_global.pdf" download>Download</a>
+        </div>
+      </li>
     </ul>
 
     <footer>
