Add decks 26-32 on systems programming topics
Added seven comprehensive lecture decks covering advanced C programming:
- Deck 26: Function Pointers (callbacks, qsort, design patterns)
- Deck 27: Command Line Arguments (argc/argv, CLI tools)
- Deck 28: Typedef and Const (type aliases, const correctness)
- Deck 29: Bitwise Operations (bit manipulation, flags)
- Deck 30: Standard Library (string.h, stdlib.h, math.h)
- Deck 31: Memory Alignment & Padding (struct layout)
- Deck 32: Compilation Process (preprocessing to linking)

Each deck contains 20 comprehensive programs with detailed examples
and outputs. Updated README and index.html to reflect 32 total decks.

--- a/index.html
+++ b/index.html
@@ -359,6 +359,69 @@
           <a href="deck25_static_global.pdf" download>Download</a>
         </div>
       </li>
+
+      <li class="slide-item">
+        <div class="slide-title"><span class="slide-number">26</span>Function Pointers</div>
+        <div class="slide-description">Function pointer basics, callbacks, arrays of function pointers, qsort, design patterns (state machine, command, strategy, observer), higher-order functions.</div>
+        <div class="slide-links">
+          <a href="deck26_function_pointers.pdf" target="_blank">View PDF</a>
+          <a href="deck26_function_pointers.pdf" download>Download</a>
+        </div>
+      </li>
+
+      <li class="slide-item">
+        <div class="slide-title"><span class="slide-number">27</span>Command Line Arguments</div>
+        <div class="slide-description">argc/argv fundamentals, argument parsing, flags and options, environment variables, practical CLI tools (grep, wc, cp, hexdump).</div>
+        <div class="slide-links">
+          <a href="deck27_command_line.pdf" target="_blank">View PDF</a>
+          <a href="deck27_command_line.pdf" download>Download</a>
+        </div>
+      </li>
+
+      <li class="slide-item">
+        <div class="slide-title"><span class="slide-number">28</span>Typedef and Const</div>
+        <div class="slide-description">Type aliases with typedef, const variables and pointers, const correctness, typedef with structs/functions/arrays, typedef vs #define.</div>
+        <div class="slide-links">
+          <a href="deck28_typedef_const.pdf" target="_blank">View PDF</a>
+          <a href="deck28_typedef_const.pdf" download>Download</a>
+        </div>
+      </li>
+
+      <li class="slide-item">
+        <div class="slide-title"><span class="slide-number">29</span>Bitwise Operations</div>
+        <div class="slide-description">Bitwise operators (AND, OR, XOR, NOT, shifts), bit manipulation techniques, bit flags, Brian Kernighan's algorithm, RGB color packing.</div>
+        <div class="slide-links">
+          <a href="deck29_bitwise.pdf" target="_blank">View PDF</a>
+          <a href="deck29_bitwise.pdf" download>Download</a>
+        </div>
+      </li>
+
+      <li class="slide-item">
+        <div class="slide-title"><span class="slide-number">30</span>Standard Library</div>
+        <div class="slide-description">Comprehensive overview of string.h (strcpy, strcmp, strcat), stdlib.h (atoi, qsort, rand), math.h (sqrt, pow, trig), ctype.h functions.</div>
+        <div class="slide-links">
+          <a href="deck30_stdlib.pdf" target="_blank">View PDF</a>
+          <a href="deck30_stdlib.pdf" download>Download</a>
+        </div>
+      </li>
+
+      <li class="slide-item">
+        <div class="slide-title"><span class="slide-number">31</span>Memory Alignment & Padding</div>
+        <div class="slide-description">Struct layout, padding, alignment requirements, offsetof macro, packed structs, bit fields, cache line alignment, optimization techniques.</div>
+        <div class="slide-links">
+          <a href="deck31_memory_alignment.pdf" target="_blank">View PDF</a>
+          <a href="deck31_memory_alignment.pdf" download>Download</a>
+        </div>
+      </li>
+
+      <li class="slide-item">
+        <div class="slide-title"><span class="slide-number">32</span>Compilation Process</div>
+        <div class="slide-description">Detailed coverage of preprocessing, compilation to assembly, object files, linking, static/dynamic libraries, optimization levels, debug symbols.</div>
+        <div class="slide-links">
+          <a href="deck32_compilation_process.pdf" target="_blank">View PDF</a>
+          <a href="deck32_compilation_process.pdf" download>Download</a>
+        </div>
+      </li>
     </ul>
 
     <footer>
